adjusted styling on oneSneaker.handlebars to fix formatting and spacing on the tags

--- a/public/CSS/style.css
+++ b/public/CSS/style.css
@@ -144,6 +144,11 @@
     margin-bottom: 20px;
   }
 
+  .tag-box {
+    text-align: center;
+    padding: 0px;
+  }
+
   @media only screen and (max-width: 1200px) {
    .logo img {
       display: none;
